fix: Fixing some sonar issues